Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8826

Ctrl+W while Ctrl+Tab navigation can crash Creator

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.7.0
    • Qt Creator 2.6.2, Qt Creator 2.7.0
    • Editors
    • None
    • 6b62d099dd95c958bf2dcd4feffc464c67f49f53

      In Qt Creator, while in Edit mode, you can switch documents with Ctrl+Tab.

      Doing following sequence will crash Qt Creator on windows:

      0. ensure you saved all wour work!
      1. Ensure you have at least one opened document: C++/text/source...
      2. Press and hold Ctrl.
      3. Press and release Tab. The pop up will pop and stay open with next document highlighted.
      4. Press and release Up arrow. The current opened file should be now highlighted.
      5. Press and release W. The current document will close, but still highlighted into the popup.
      6. Release the Ctrl. Enjoy the crash

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            petersvp Peter Petrov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes