Editor: Close open editors popup on editor close

Task-number: QTCREATORBUG-8826

Change-Id: I4eaa6e7c2228deb0c10a4c428a2bb7ad1b975230
Reviewed-by: Eike Ziller <eike.ziller@digia.com>